[package]
name = "powergraph-rust"
version = "0.1.0"
authors = ["Jasper Chapman-Black <jasperchapmanblack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.11.0"
strum_macros = "0.11.0"
weak-self = "1.0.1"
